2002-11-19  Adam Fedor  <fedor@gnu.org>

	* objc-exp.y: Revert to old skip_quoted usage.

2002-11-19  Adam Fedor  <fedor@gnu.org>

	* Makefile.in (SFILES): Add objc-exp.y objc-lang.c.
	(objc_lang_h): Define.
	(YYFILES): Add objc-exp.tab.c.
	(local-maintainer-clean): Remove objc-exp.tab.c.
	(objc-exp.tab.c, objc-exp.tab.o, objc-lang.o): New target.
	
2002-11-19  Pierre Muller  <muller@ics.u-strasbg.fr>

	* p-exp.y (typecast rule): Add automatic dereference of
	pascal classes if needed.
	(THIS): Set current_type.
	Automatically dereference pascal classes. 
	(typebase rule): Add ^typebase recognition.

2002-11-18  Adam Fedor  <fedor@gnu.org>

	* expprint.c (print_subexp): Handle OP_OBJC_NSSTRING,
	OP_OBJC_MSGCALL, and OP_OBJC_SELF.	
	(op_name): Handle OP_OBJC_SELF.
	* Makefile.in (expprint.o): Add additional depends.

2002-11-18  Adam Fedor  <fedor@gnu.org>

	* expression.h: Rename ObjC ops to OP_OBJC_MSGCALL,
	OP_OBJC_SELECTOR, OP_OBJC_NSSTRING, and OP_OBJC_SELF.
	* parse.c (length_of_subexp, prefixify_subexp): Likewise.
	* objc-exp.y: Likewise.	

2002-11-18  Adam Fedor  <fedor@gnu.org>

	* gdb/parser-defs.h: (struct objc_class_str): New structure
	for parsing ObjC classes.

2002-11-18  Andrew Cagney  <ac131313@redhat.com>

	* stack.c (frame_relative_level): Copy function from here ...
	* frame.c (frame_relative_level): ...to here.

2002-11-18  Andrew Cagney  <ac131313@redhat.com>

	* frame.h (enum frame_type): Define.
	(get_frame_type): Declare.
	(struct frame_info): Add field `type'.  Delete field
	signal_handler_caller.
	(deprecated_set_frame_signal_handler_caller): Declare.
	* frame.c (get_frame_type): New function.
	(deprecated_set_frame_type): New function.
	(create_new_frame): Set the frame's type.
	(get_prev_frame): Similar.
	* sparc-tdep.c: Use get_frame_type instead of signal_handler_caller.
	* s390-tdep.c: Ditto.
	* m68klinux-nat.c: Ditto.
	* ns32k-tdep.c: Ditto.
	* x86-64-linux-tdep.c: Ditto.
	* vax-tdep.c: Ditto.
	* rs6000-tdep.c: Ditto.